spec/tests/error/error-1.5.tcl
# Test: error with variable interpolation
set msg "invalid value"
error $msg
